feat(community-transport): add Community Transport and related TCK tests